--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "node": ">=6.0.0"
   },
   "dependencies": {
+    "mutexify": "^1.2.0",
     "onoff": "^5.0.0",
-    "mutexify": "^1.2.0"
+    "pigpio": "^2.0.1"
   },
   "devDependencies": {
     "async": "^3.1.0",
